<resources>
    <string name="app_name">04_Interface_Elements</string>
    <string name="hint">Enter a number</string>
    <string name="press">Press me!</string>
    <string name="next">Next Page</string>
    <string name="previous">Previous Page</string>
    <string name="pressed">Pressed</string>
    <string name="released">Released</string>
    <string name="button">Button</string>
    <string name="counter">Number of clicks: 0</string>
    <string-array name="heros">
        <item>Tinker</item>
        <item>Oracle</item>
        <item>Dazzle</item>
        <item>Faceless Void</item>
        <item>Arc Warden</item>
        <item>Invoker</item>
    </string-array>
</resources>